<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ejd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.amador.ejerciciosficheros.EjD">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoudD1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        >


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtFileNameD"
            android:hint="@string/data_file"
            android:ems="10"
            android:gravity="center"
            android:layout_marginTop="@dimen/top_edt"
            android:inputType="numberDecimal"

            />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnExplore"
        android:text="@string/text_explore"
        android:layout_toRightOf="@+id/inputLayoudD1"
        android:layout_alignBaseline="@+id/inputLayoudD1"
        android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtContenFile"
        android:layout_below="@+id/inputLayoudD1"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/inputLayoudD2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtContenFile"

        >


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edtFileNameSave"
            android:hint="@string/data_save"
            android:ems="10"
            android:gravity="center"
            android:layout_marginTop="@dimen/top_edt"
            android:inputType="numberDecimal"

            />


    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/text_save"
        android:layout_alignBottom="@+id/inputLayoudD2"
        android:layout_toRightOf="@+id/inputLayoudD2"
        android:layout_alignBaseline="@+id/inputLayoudD2"
        android:layout_marginLeft="@dimen/abc_action_bar_content_inset_material"
        />

    <RadioGroup
        android:id="@+id/tgGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputLayoudD2"

        >

        <RadioButton
            android:id="@+id/rbUTF8"
            android:text="@string/utf8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"

            />

        <RadioButton
            android:id="@+id/rbUTF16"
            android:text="@string/utf16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

        <RadioButton
            android:id="@+id/rbISO"
            android:text="@string/ISO"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />

    </RadioGroup>


</RelativeLayout>
